        frame, unlike Firefox, which always starts at the start of
        the first frame.
      - Returns the cursor and viewport to their original position
        on cancel.
      - Backtracks to the first successful match after pressing
        backspace.
      - Supports reverse incremental search.
      - Input boxes are not focused when matches are highlighted.
    • Ex command parsing improvements, including:
      - Multiple Ex commands may now be separated by | [b1]
      - Commands can continue over multiple lines in RC files by
        prefixing the continuation lines with a \ [b3]
      - The \ character is no longer treated specially within single
        quotes, i.e., 'fo\o''bar' ⇒ fo\o'bar [b1]
    • The command line is now hidden by default. Added c, C, and M to
      'guioptions'. [b4]
    • Hints mode improvements, including:
      - Added g; continued extended hints mode, which allows
        selecting multiple hints. Removed ;F. [b1]
      - Hints are now updated after scrolling and window resizing. [b3]
      - ;s now prompts for a filename on the command-line rather
        than in a dialog. [b5]
      - Added ;a and ;S modes for creating bookmarks and search keywords. [b4][b3]
      - Added 'hintkeys' option. [b2]
      - Added "transliterated" option to 'hintmatching'. [b1]
    • General completion improvements
      - JavaScript completion improvements, including: [b2]
        + The prototype of the function whose arguments are currently
          being typed is displayed during completion.
        + Non-enumerable global properties are now completed for the
          global object, including XMLHttpRequest and encodeURI.
      - The concept of completion contexts is now exposed to the user
        (see :contexts), allowing for powerful and fine-grained
        completion system customization. [b1]
    • The external editor can now be configured to open to a given
      line number and column, used for opening source links and